--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ margin-top:-2px;
 <div class="group">
 
 <div class="left">
-<img src="fundpic.jpg" alt="" />
+<img src="fundpic.gif" alt="" />
 </div>
 
 
